test/commonjs/syntax-error/lib/a.js
'use strict'

module.exports = function (app, opts, next) {
  // this has a syntax error on purpose
  [
}
